--- a/coding.html
+++ b/coding.html
@@ -41,6 +41,9 @@
             <li class = "nav-item">
               <a class = "nav-link" href = "coding.html">Coding Experience</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">Sample Projects</a>
+            </li>
             <li class = "nav-item">
               <a class = "nav-link" href = "contact.html">Contact</a>
             </li>
