--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,9 @@
             <a class="nav-link" href="coding.html">Coding Experience</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="projects.html">Sample Projects</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
