--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto+Condensed:wght@300&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-  <link href='./about.css' rel='stylesheet'>
-  </link>
+  <link href='./about.css' rel='stylesheet'></link>
 </head>
 
 <body>
@@ -41,8 +39,12 @@
             <a class="nav-link" href="coding.html">Coding Experience</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="projects.html">Sample Projects</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
+
         </ul>
       </div>
     </div>
